--- a/LAB_1/appsettings.json
+++ b/LAB_1/appsettings.json
@@ -1,4 +1,9 @@
 {
+  "ConnectionStrings": {
+    //ZMIENIĆ CONNECTION STRING
+    "DefaultConnection": "Data Source=DESKTOP-9K2SBT4\\MSSQLSERVER01;Database=LAB_1;Integrated Security=true; TrustServerCertificate=true;",
+    "UBB_TripsContextConnection": "Server=(localdb)\\mssqllocaldb;Database=UBB_Trips;Trusted_Connection=True;MultipleActiveResultSets=true"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
