--- a/LAB_1_MVC/appsettings.json
+++ b/LAB_1_MVC/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DBContextConnection": "Server=(localdb)\\mssqllocaldb;Database=LAB_1_MVC;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DBContextConnection": "SData Source=DESKTOP-9K2SBT4\\MSSQLSERVER01;Database=LAB_1_MVC;Integrated Security=true; TrustServerCertificate=true;"
   }
 }
